# yt-dlp-FixupMtime

./: .gitignore  README.md  pyproject.toml  ruff.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: main.yml
test/: test_fixup_mtime.py
yt_dlp_plugins/postprocessor/: fixup_mtime.py
